*5 themes (zu normal wurde christmas,dark theme,halloween theme,lgbtq theme geaddet) als css datei über die gui per toggle button änderbar (neben dem c/f toggle button) *der neue toggle button zeigt den aktuellen theme namen an Logik in changeTheme() in HelloController.java *export button per scenebuilder und in den css dateien hinzugefügt um die arbeit später zu ersparen, logik noch nicht implementiert *verbesserte eingabe validierung : vereinheitlicht in isCityValid; nurmehr buchstaben sonderzeichen und bindestriche erlaubt *history verbessert: durch die implementierung der detailansicht hat es sich ergeben auch die history mit den zusätzlichen daten zu implementieren